add top up button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="ui hidden divider"></div>
-  <div class="ui container grid">
+  <div id="haut" class="ui container grid">
     <div class="row ui conteneurblue">
       <div class="two wide column"><img class="ui image" src="assets/img/logo_marianne.svg" alt="Logo Ministère" width='100pt'></div>
 	  <div class="two wide column"><img class="ui image" src="assets/img/ecophyto_logo.png" alt="Logo Ecophyto" width='200pt'></div>
@@ -28,6 +28,7 @@
         <div class="label">Financés aux niveaux national et européen depuis 2009. Base réalisée par le service de la recherche du <a href="http://www.developpement-durable.gouv.fr/" target="_blank">ministère de la Transition écologique et solidaire</a> avec l'appui des ministères en charge de l'agriculture, la santé et la recherche. Contact : <a href="mailto:ecophyto-recherche@developpement-durable.gouv.fr"><i class="mail icon"></i></a></div>
       </div>
     </div>
+	
     <div class="row container">
       <div class="four wide column center aligned">
         <div class="ui container">
@@ -43,6 +44,9 @@
           </div>
           <div class="ui container"><p>&nbsp;</p></div>
           <div class="ui container left aligned" id="target">Chargement...</div>
+          <div class="ui container"><p>&nbsp;</p></div>
+		  <div class="overlay"><div class="ui labeled icon vertical menu"><a class="item" href="#haut"><i class="angle double up icon"></i></a></div>
+    </div>	
         </div>
       </div>
       <div class="one wide column"></div>
