update index with bold

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <div>
     <fieldset id="etat_criteria">
       <legend>Etat du projet</legend>
-            <input type="checkbox" name="etat" value ="All" id="etat_all"><span> Tout</span>
+            <input type="checkbox" name="etat" value ="All" id="etat_all"><span><b> Tout</b></span>
       {{#ETAT}}{{#.}}
       <div id="etat">
         <div class="checkbox" fjs-criteria="field=ETAT,ele=#etat input:checkbox">
@@ -136,7 +136,7 @@
   <div>
     <fieldset id="appel_criteria">
       <legend>Appel / action</legend>
-            <input type="checkbox" name="appel" value ="All" id="appel_all"><span> Tout</span>
+            <input type="checkbox" name="appel" value ="All" id="appel_all"><span><b> Tout</b>
       {{#APPEL}}{{#.}}
       <div id="appel">
         <div class="checkbox" fjs-criteria="field=APPEL,ele=#appel input:checkbox">
