--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="./assets/mustache/mustache.min.js" type="text/javascript"></script>
   <script src="./semantic/dist/semantic.min.js" type="text/javascript"></script>
   
-  <script src="./data/bdphyto.js" type="text/javascript"></script>
+  <script src="./data/data.js" type="text/javascript"></script>
   <script src="./assets/js/auto.js" type="text/javascript"></script>
 
   <title>#EcoPhyto - Pesticides - Projets de recherche</title>
